fixed outline on mobile version

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -41,7 +41,8 @@
     }
 
     &:focus {
-      outline: $color-placeholder;
+      outline: thick double $color-placeholder;
+      border-radius: 40px;
     }
 
     &--message {
@@ -50,6 +51,10 @@
       margin-bottom: 16px;
       resize: none;
       box-sizing: border-box;
+
+      &:focus {
+        border-radius: 16px;
+      }
     }
   }
 
